kubernetes/clusters/home/4-apps/arr-stack/seerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: arr-stack

spec:
  selector:
    app: seerr

  ports:
    - name: http
      protocol: TCP
      port: 5055
      targetPort: 5055

  type: ClusterIP
